WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199155
[WPE][GTK] Fixes for compilation with unified builds disabled
https://bugs.webkit.org/show_bug.cgi?id=199155
Summary
[WPE][GTK] Fixes for compilation with unified builds disabled
Adrian Perez
Reported
2019-06-24 07:07:05 PDT
As of
r246731
there's a few build errors when unified builds are disabled: --- In file included from ../Source/WebCore/rendering/LayerAncestorClippingStack.cpp:27: ../Source/WebCore/rendering/LayerAncestorClippingStack.h:42:24: error: unknown type name 'RenderLayer' CompositedClipData(RenderLayer* layer, LayoutRect rect, bool isOverflowScrollEntry) ^ ../Source/WebCore/rendering/LayerAncestorClippingStack.h:61:13: error: use of undeclared identifier 'RenderLayer' WeakPtr<RenderLayer> clippingLayer; // For scroller entries, the scrolling layer. For other entries, the most-descendant layer that has a clip. ^ ../Source/WebCore/rendering/LayerAncestorClippingStack.h:85:5: error: unknown type name 'GraphicsLayer' GraphicsLayer* firstClippingLayer() const; ^ ../Source/WebCore/rendering/LayerAncestorClippingStack.h:86:5: error: unknown type name 'GraphicsLayer' GraphicsLayer* lastClippingLayer() const; ^ ../Source/WebCore/rendering/LayerAncestorClippingStack.h:94:16: error: use of undeclared identifier 'GraphicsLayer' RefPtr<GraphicsLayer> clippingLayer; ^ --- In file included from ../Source/WebKit/NetworkProcess/glib/DNSCache.cpp:27: ../Source/WebKit/NetworkProcess/glib/DNSCache.h:45:29: error: use of undeclared identifier 'GInetAddress' Optional<Vector<GRefPtr<GInetAddress>>> lookup(const CString& host, Type = Type::Default); ^ --- ../Source/WebKit/NetworkProcess/glib/DNSCache.cpp:37:32: error: use of undeclared identifier 'RunLoopSourcePriority' m_expiredTimer.setPriority(RunLoopSourcePriority::ReleaseUnusedResourcesTimer); ^
Attachments
Patch
(2.92 KB, patch)
2019-06-24 07:10 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2019-06-24 07:10:59 PDT
Created
attachment 372756
[details]
Patch
Michael Catanzaro
Comment 2
2019-06-24 07:24:53 PDT
Comment on
attachment 372756
[details]
Patch It's going to be all for naught without an EWS.
Adrian Perez
Comment 3
2019-06-24 07:32:53 PDT
(In reply to Michael Catanzaro from
comment #2
)
> Comment on
attachment 372756
[details]
> Patch > > It's going to be all for naught without an EWS.
I have a crappy script locally which picks the “compile_commands.json” file and runs over the sources using “-fsyntax-only” with Clang and that is able to find out the missing includes/declarations without making the compiler do optimizations/code-generation. I want to make make some measurements once it can run Clang in parallel (right now it's serial) to know how fast such an EWS would be before proposing adding it ;-)
WebKit Commit Bot
Comment 4
2019-06-24 07:52:59 PDT
Comment on
attachment 372756
[details]
Patch Clearing flags on attachment: 372756 Committed
r246734
: <
https://trac.webkit.org/changeset/246734
>
WebKit Commit Bot
Comment 5
2019-06-24 07:53:01 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-06-24 07:53:13 PDT
<
rdar://problem/52053871
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug