[WPE][GTK] Fixes for compilation with unified builds disabled https://bugs.webkit.org/show_bug.cgi?id=199155

Reviewed by Michael Catanzaro.

Source/WebCore:

No new tests needed.

* rendering/LayerAncestorClippingStack.h: Add missing inclusion of RenderLayer.h

Source/WebKit:

* NetworkProcess/glib/DNSCache.cpp: Add missing inclusion of wtf/glib/RunLoopSourcePriority.h
* NetworkProcess/glib/DNSCache.h: Add missing forward declaration for GInetAddress


Canonical link: https://commits.webkit.org/213119@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246734 268f45cc-cd09-0410-ab3c-d52691b4dbfc